# promptTuning

./: .gitignore  README.md  req.md  使用流程.md  知识.md
ai/dspy/: component_catalog.txt
api/: generate.py  prompt_manager.py
backend/: .env.example  main.py  pyproject.toml
backend/ai/dspy/: optimize_and_export.py  valid_types.json
backend/ai/langsmith/: annotation.py
backend/api/: playground.py
frontend/: package-lock.json  package.json
frontend/scripts/: build-catalog.ts
frontend/src/: App.tsx
frontend/src/components/definitions/: action.ts  checkin.tsx  display.ts  form.ts
frontend/src/editor/: ComponentPanel.tsx  ConfigPanel.tsx  Editor.tsx  EditorContext.tsx  PreviewArea.tsx
frontend/src/examples/: checkin-page.json  detail-page.json  form-page.json  training_data.json
frontend/src/playground/: Playground.tsx  api.ts
frontend/src/registry/: catalog-data.ts  index.ts  registry.test.ts
frontend/src/renderer/: SchemaRenderer.test.tsx  SchemaRenderer.tsx  actions.ts
frontend/src/types/: component.ts  schema.ts
frontend/src/utils/: schemaValidator.test.ts  schemaValidator.ts
openspec/changes/a2ui-ai-page-generator/: design.md  proposal.md  tasks.md
openspec/changes/a2ui-ai-page-generator/specs/a2ui-component-library/: spec.md
openspec/changes/a2ui-ai-page-generator/specs/ai-generation-api/: spec.md
openspec/changes/a2ui-ai-page-generator/specs/component-registry/: spec.md
openspec/changes/a2ui-ai-page-generator/specs/dspy-optimizer/: spec.md
prompts/: 20260610_001821_prompt_template.txt  current_prompt.txt
(+6 files in other folders)
